fixed spacing and case study excerpt styling

--- a/source/css/partials/_case_study.scss
+++ b/source/css/partials/_case_study.scss
@@ -6,4 +6,12 @@ section.content-section.case-study {
     }
   }
 
+  .post-excerpt {
+    padding-bottom: rem(20);
+  }
+
+  .gallery-images + .post-content {
+    padding-top: rem(20);
+  }
+
 }
