--- a/source/css/partials/_gallery.scss
+++ b/source/css/partials/_gallery.scss
@@ -32,7 +32,8 @@ section.content-section.case-study {
     }
   }
 
-  .post-content {
+  .post-content,
+  .post-excerpt {
     padding-left: rem(22);
     padding-right: rem(22);
     padding-bottom: rem(40);
